attempting to upload video

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
   <div class="container main-content">
     <h2>Hi, I'm Star! &#10032</h2>
-    <video class="homepage-video-left" src="assets/index/Intro.mov" controls></video>
+    <video class="homepage-video-left" src="assets/index/IntroVideo.mov" controls></video>
     <h3>Contact Me</h3>
     <a href="mailto:sgkim918@gmail.com">
       <button type="submit">
