minor text content updates

--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,7 @@
   <div class="container main-content about-page">
     <h2>On a more personal level...</h2>
     <img src="assets/aboutme/Me.png" alt="Me">
-    <p>I'm a real human being, I promise! (Not just a walking, talking CV). I'm from Denver, Colorado and have been living here for over 15 years. As a new grad, I'm very excited to get out into the world, get my hands dirty, and try new things! My current favorite hobbies are singing, learning to play instruments, and writing music. I'm an ameteur bassist and guitarist (electric preferred!), with plans to learn drums soon. I also enjoy writing, art, dance, and fashion-- any form of creative expression, really! I'm admittedly not very good at most of them, but I love them anyway. : )  When I'm looking to relax, I can be found hiking, walking my dog Luna, playing with tarot cards, hanging out with friends and family, reading, journaling, meditating, and/or fueling my boba addiction. Colorado is pretty incredible, but Luna and I are looking forward to moving somewhere cool and exploring (sniffing)!</p>
+    <p>I'm a real human being, I promise! (Not just a walking, talking CV). I'm from Denver, Colorado and have been living there for over 15 years. As a new grad, I'm very excited to get out into the world, get my hands dirty, and try new things! My current favorite hobbies are singing, learning to play instruments, and writing music. I'm an ameteur bassist and guitarist (electric preferred!), with plans to learn drums soon. I also enjoy writing, art, dance, and fashion-- any form of creative expression, really! I'm admittedly not very good at most of them, but I love them anyway. : )  When I'm looking to relax, I can be found hiking, walking my dog Luna, playing with tarot cards, hanging out with friends and family, reading, journaling, meditating, and/or fueling my boba addiction. Colorado is pretty incredible, but Luna and I are glad to be in Los Angeles and have somewhere new to explore (sniff)!</p>
     <br>
     <h3>Some Favorites of Mine</h3>
     <ul>
@@ -63,7 +63,7 @@
       <li><b>Favorite music genre:</b> Alternative rock  (Classic with a twist-- can't go wrong.)</li>
       <li><b>Favorite TV show (currently):</b> Dickinson  (It's a little funky, but very fun!)</li>
       <li><b>Favorite/lucky number:</b> 9  (Such a good number.)</li>
-      <li><b>Favorite coding language:</b> Swift  (Controversial, I know! I'm very biased. A close second is Python, although I'm not sure if that's better or worse.)</li>
+      <li><b>Favorite coding language:</b> Python  (Controversial, I know! I'm very biased. A close second is Swift, although I'm not sure if that's better or worse.)</li>
     </ul>
     <br>
     <h3>Photo Gallery</h3>
