--- a/projectportfolio.html
+++ b/projectportfolio.html
@@ -75,13 +75,13 @@
     <br>
 
     <button type="button" class="collapsible">
-      <h4>&#10032 Differentiating Between AI- and Human-Generated Images Using a Convolutional Neural Network</h4>
+      <h4>&#9618&nbsp;&nbsp;Differentiating Between AI- and Human-Generated Images Using a Convolutional Neural Network</h4>
     </button>
     <div class="content">
       <p><b>Technical Skills:</b> Python, Data Science, Machine Learning, Convolutional Neural Networks</p>
       <p><b>Soft Skills:</b> Investigating a research question, data presentation, collaboration</p>
       <div class="text-content">
-        <img class="project-image" src="assets/projectportfolio/MachineLearningProject.png" alt="Image Description">
+        <embed class="project-pdf" src="assets/projectportfolio/MachineLearningReport.pdf" type="application/pdf">
         <p><b>Description:</b></p>
         <p>This was a solo research project I completed for a graduate class on Machine Learning. I experiemented with various Convolutional Neural Networks with a variety of parameter inputs to try and create a model that could accurately predict whether an image was human- or AI-generated. The full details are outlined in the report to the left, and the source code can be found on Github <a href="https://github.com/starkim918/AI-generated-images-CNN">here</a>!</p>
       </div>
